# gojira-reaper-sidecar

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  GOJIRA_BUILD_DLL.cmd  GOJIRA_DOCTOR.cmd  GOJIRA_INSTALL_DLL.cmd  GOJIRA_START.cmd  GOJIRA_UI_DEV.cmd  README.md  TAURI_UI.md
gojira_brain_ui/: Cargo.toml  index.html
gojira_brain_ui/crates/brain_cli/: Cargo.toml
gojira_brain_ui/crates/brain_cli/src/: main.rs
gojira_brain_ui/crates/brain_core/: Cargo.toml
gojira_brain_ui/crates/brain_core/src/: lib.rs
gojira_brain_ui/crates/brain_core/src/modules/: cleaner.rs  gemini.rs  mod.rs  param_map.rs  protocol.rs  system_prompt.rs  value_resolver.rs
gojira_brain_ui/src/: App.tsx  calibration.rs  cleaner.rs  main.rs  protocol.rs  styles.css  system_prompt.rs  types.ts
gojira_brain_ui/src-tauri/: Cargo.toml  tauri.conf.json
gojira_brain_ui/src-tauri/capabilities/: default.json
gojira_brain_ui/src-tauri/src/: app.rs  app_state.rs  calibration.rs  cleaner.rs  commands.rs  diff.rs  gemini.rs  main.rs  param_map.rs  system_prompt.rs  vault.rs  ws_actor.rs
gojira_brain_ui/src-tauri/src/tauri_utils/: app_state.rs  diff.rs  mod.rs  vault.rs  ws_actor.rs
gojira_brain_ui/src/components/: DiffViewer.tsx  StatusBar.tsx
gojira_brain_ui/ui/: index.html  package-lock.json  package.json  vite.config.ts
gojira_brain_ui/ui/src/: App.tsx  apiProviders.ts  chatArchive.ts  styles.css  types.ts  workspace.ts
gojira_brain_ui/ui/src/components/: ChatPanel.tsx  DiffViewer.tsx  IndexMappingEditor.tsx  InspectorPanel.tsx  SidebarPanel.tsx  StatusBar.tsx
gojira_brain_ui/ui/src/platform/: chatStore.ts  tauri.ts  (+1 more)
gojira_protocol/: Cargo.toml
gojira_protocol/src/: lib.rs
reaper_gojira_dll/: Cargo.toml
reaper_gojira_dll/src/: lib.rs  main_loop.rs  net.rs  protocol.rs  reaper_api.rs  resolver.rs  validator.rs
reaper_gojira_dll/tests/: ws_roundtrip.rs
scripts/: gojira.ps1  tauri.dev.override.json
tools/: run_tone_tests_v6.ps1  save_handshake.ps1  tone_report.py  ws_dump_handshake.ps1  ws_local_smoke_test.ps1
tools/reaper/: dump_gojira_indices.lua
