[package]
name = "gojira_brain_ui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.6" }

[dependencies]
futures-util = "0.3.30"
gojira_protocol = { path = "../../gojira_protocol" }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "2.0.11"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = "0.26.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
zeroize = "1.8.1"

[target.'cfg(windows)'.dependencies]
tauri = "2.9.5"
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-store = "2.4.1"
tauri-plugin-stronghold = "2.3.1"
