[package]
name = "gojira_brain_ui_tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
brain_core = { path = "../crates/brain_core" }
futures-util = "0.3.30"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = "0.27"
url = "2"
zeroize = "1"

[target.'cfg(windows)'.dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-stronghold = "2"
