[package]
name = "brain_core"
version = "0.1.0"
edition = "2021"

[dependencies]
gojira_protocol = { path = "../../../gojira_protocol" }
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

